hphp/hack/test/typecheck/hh_ignore1.php.exp
WARN: File "hh_ignore1.php", line 6, characters 3-47:
You cannot use `HH_FIXME` comments to suppress warnings. Use `HH_IGNORE[12003]` instead. (Warn[12003])
WARN: File "hh_ignore1.php", line 7, characters 3-4:
This is a sketchy null check on an expression of type ?int.
It detects nulls, but it will also detect many other falsy values, including `false`, `0`, `0.0`, `""`, `"0"`, empty Containers, and more.
If you want to test for them, please consider doing so explicitly.
If you only meant to test for `null`, use `$x is nonnull` instead (Warn[12003])
ERROR: File "hh_ignore1.php", line 8, characters 3-46:
You cannot use `HH_IGNORE` to suppress non-warning code 2050. Hack errors should not be suppressed. You should try your best to fix the code causing the error, or incidents will happen. (Naming[2050])
ERROR: File "hh_ignore1.php", line 9, characters 3-4:
Variable `$y` is undefined, or not always defined. (Naming[2050])
  File "hh_ignore1.php", line 7, characters 3-4:
  Did you mean `$x` instead?
